<resources>
    <string name="app_name">Sqorr</string>
    <string name="facebook_app_id">2336992973184756</string>
    <string name="fb_login_protocol_scheme">fb2336992973184756</string>
    <string name="platform">Android</string>
    <string name="server_client_id">76469689893-792i5to7gddnll6hcjq1o2qm25glktot.apps.googleusercontent.com</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="welcome_msg">Welcome to Sqorr. \nThe Game for the \nModern Fan.</string>
    <string name="on_boarding_2">Pick your sport</string>
    <string name="on_boarding_sub_2">Three game types and new game\ncards everyday keeps things\n fresh and fun.</string>
    <string name="on_boarding_3">Pick your players</string>
    <string name="on_boarding_sub_3">Use easy-to-access stats \n to choose four to ten \n match-ups per cards.</string>
    <string name="on_boarding_4">Pick your prize</string>
    <string name="on_boarding_sub_4">Buy your roster.The more you \n pay,the more the payout.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_hv_ac"><u>Already have an account ?</u></string>
    <string name="forgot_pwd"><u>Forgot password?</u></string>
    <string name="play_for_cash">Play for cash</string>
    <string name="play_for_cash_desc">Deposit cash and play as many \ncards as you want.</string>
    <string name="play_for_cash_verification">Requires verification that you are 21 or older and located \nin a state that allows legal betting.</string>
    <string name="play_for_tokens">Play for tokens</string>
    <string name="play_for_token_desc">Experience Sqorr\'s card gameplay with \na limited number of free tokens. </string>
    <string name="play_for_token_verification">Start with 20 tokens.Additional tokens will only be provided \nif you are located in a state that does not allow legal betting.</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="email_hint">Enter your email address</string>
    <string name="password">PASSWORD</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="promo_header">PROMO CODE(OPTIONAL)</string>
    <string name="promo_hint">Enter a promo code</string>
    <string name="email_error_txt">Email already associated with an account.</string>
    <string name="promo_error_txt">promo code not valid</string>
    <string name="full_name">FULL NAME</string>
    <string name="full_name_hint">First and last</string>
    <string name="_dob">DATE OF BIRTH</string>
    <string name="dob_hint">Must be over 21 years of age</string>
    <string name="phone_number">PHONE NUMBER (OPTIONAL)</string>
    <string name="phone_hint">Phone number</string>
    <string name="choose_play">Choose a way to play </string>
    <string name="sign_to_continue">Sign up to continue</string>
    <string name="sign_up_with">SIGN UP WITH</string>
    <string name="log_with">LOG IN WITH </string>
    <string name="btn_log_in">Log In</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="pwd_recovery">Password Recovery</string>
    <string name="pwd_rec_header">Enter your account email address</string>
    <string name="pwd_rec_sub_header">We will send you an email with instructions on how to reset your password</string>
    <string name="profile">Profile</string>
    <string name="_account">Account</string>
    <string name="_5_sign_up_bonus">$5 Sign up bonus</string>
    <string name="join_now">join now</string>
    <string name="banner_image">Banner image</string>
    <string name="dollar_image">Dollar image</string>
    <string name="play_for_cash_now">PLAY FOR CASH NOW</string>
    <string name="how_to_play">How to play</string>
    <string name="game_rules_tutorial_videos_and_scoring">Game rules, tutorial videos, and scoring.</string>
    <string name="_faqs">FAQs</string>
    <string name="faq_hint">You\'ve got questions, we\'ve got answers.</string>
    <string name="customer_support">Customer Support</string>
    <string name="customer_help_hint">We\'re here to help.</string>
    <string name="_about">ABOUT</string>
    <string name="profile_image">Profile Image</string>
    <string name="_trophy">Trophy</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="add_cash">Add Cash</string>
    <string name="show_dollar">Show Dollar</string>
    <string name="_transaction">Transactions</string>
    <string name="transaction_history_and_funds">Transaction history and add/withdraw funds.</string>
    <string name="_rules">Rules</string>
    <string name="_chevron">Chevron</string>
    <string name="faq_image">FAQ Image</string>
    <string name="_support">support</string>
    <string name="privacy_icon">privacy icon</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="legal_icon">legal icon</string>
    <string name="about_vetnos">About Vetnos</string>
    <string name="_transactions">Transactions</string>
    <string name="add_funds">Add funds</string>
    <string name="add_new_card">Add new card</string>
    <string name="edit_card">Edit card</string>
    <string name="add_funds_to_play_for_cash">Add funds to play for cash</string>
    <string name="token_balance">Token balance</string>
    <string name="cash_balance">Cash balance</string>
    <string name="_wager">WAGER</string>
    <string name="have_a_promo_code_enter_it_here">Have a promo code? Enter it here</string>
    <string name="_profile">Profile</string>
    <string name="btn_done">Done</string>
    <string name="change_password">Change Password</string>
    <string name="old_password_label">OLD PASSWORD</string>
    <string name="new_password_label">NEW PASSWORD</string>
    <string name="confirm_new_password_label">CONFIRM NEW PASSWORD</string>
    <string name="submit_btn">SUBMIT</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="at_least_one_number">At least one number</string>
    <string name="one_special_character"><![CDATA[One special character (!"#$%&\'()*+,-./:;<=>?@[\]^_{|}~)]]></string>
    <string name="add_new_credit_debit_card">Add new credit/debit card</string>
    <string name="custom_amount_hint">Custom amount</string>
    <string name="deposit_amount">Deposit amount</string>
    <string name="payment_type">Payment type</string>
    <string name="paypal">PayPal</string>
    <string name="card_number">card number</string>
    <string name="card_no_hint">1234 5678 9101 2131</string>
    <string name="expiration_date">expiration date</string>
    <string name="security_code">Security code</string>
    <string name="first_and_last">First and last</string>
    <string name="billing_address">Billing Address</string>
    <string name="_street">Street</string>
    <string name="_city">city</string>
    <string name="_state">State</string>
    <string name="zip_code">zip code</string>
    <string-array name="player_names">
        <item>Stephen Curry</item>
        <item>Enes Kanter</item>
        <item>Andre Igodala</item>
    </string-array>
    <string-array name="player_price">
        <item>-1.0</item>
        <item>-0.5</item>
        <item>-1.5</item>
    </string-array>
    <string-array name="player_positions">
        <item>Point Gaurd</item>
        <item>Center</item>
        <item>Center</item>
    </string-array>
    <string-array name="player_matches">
        <item>  POR vs GSW</item>
        <item> POR vs GSW</item>
        <item> TOR vs MIL</item>
    </string-array>
    <string-array name="player_timings">
        <item>1h 10m </item>
        <item>9h 58m</item>
        <item>1h 44m</item>
    </string-array>
    <string-array name="player_names_two">
        <item>Kawhi Leaonard</item>
        <item>Khris middleton</item>
        <item>Marc Gasol</item>
    </string-array>
    <string-array name="player_price_two">
        <item> 1.0 </item>
        <item>0.5</item>
        <item>1.5</item>
    </string-array>
    <string-array name="player_positions_two">
        <item>Point Gaurd </item>
        <item>Small Forward</item>
        <item>Center</item>
    </string-array>
    <string-array name="player_matches_two">
        <item>POR vs GSW</item>
        <item>TOR vs MIL</item>
        <item>OR vs MIL</item>
    </string-array>
    <string-array name="player_timings_two">
        <item> 9h 58m </item>
        <item>1h 33m</item>
        <item>1h 44m</item>
    </string-array>
    <string-array name="first_player_points">
        <item>8.9</item>
        <item>11.1</item>
        <item>5.9</item>
        <item>4.6</item>
        <item>10.3</item>
        <item>2.2</item>
        <item>0.9</item>
        <item>-2.7</item>
    </string-array>
    <string-array name="second_player_points">
        <item>5.6</item>
        <item>14.9</item>
        <item>6.1</item>
        <item>7.3</item>
        <item>5.0</item>
        <item>3.5</item>
        <item>0.8</item>
        <item>-2.0</item>
    </string-array>
    <string-array name="players_playing_positions">
        <item>Three Points Field Goals</item>
        <item>Field Goals</item>
        <item>"Free Throws</item>
        <item>Rebounds</item>
        <item>Assists</item>
        <item>Steals</item>
        <item>Blocked Shots</item>
        <item>Turnovers</item>
    </string-array>
    <string-array name="picks">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="multiplier">
        <item>x10</item>
        <item>x18</item>
        <item>x35</item>
        <item>x70</item>
        <item>x125</item>
        <item>x250</item>
    </string-array>
    <string-array name="winpayout">
        <item>$100</item>
        <item>$180</item>
        <item>$350</item>
        <item>$700</item>
        <item>$1250</item>
        <item>$2500</item>
    </string-array>
    <string name="your_location">Your location</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="_edit">Edit</string>
    <string name="change_your_password">Change your password</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="enter_a_new_password">Enter a new password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="you_have_entered_an_incorrect_email_or_password">You have entered an incorrect email or password.</string>
    <string name="enable_location_txt">First, we need to verify your location to make sure you are in a state that legally allows cash wagers. Please allow Sqorr to access your location.</string>
    <string name="its_game_time">It\'s almost game time!</string>
    <string name="pare">
    M4000.710,1000.400l-726.162,0l300.77,-1100.560l726.162,0z </string>
    <string name="square">
  M 0,0 L 100,0  L  70,100 L 0,100z </string>
    <string name="player_stats">PLAYER STATS</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="location_msg">Unfortunately, due to legal restrictions you are not allowed to play for cash in this location</string>
    <string name="location_title">You may only play for tokens in</string>
</resources>