<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/notlogin"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:visibility="visible">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/banner_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_banner_promo" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="-20dp"
            android:layout_marginBottom="-15dp"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/dollar_image"
            android:cropToPadding="false"
            android:rotation="20"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_badge_tokens"
            android:verticalScrollbarPosition="defaultPosition" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/exo_bolditalic"
            android:text="@string/play_for_cash_now"
            android:textColor="#fff"
            android:textSize="@dimen/txt_size_16"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/exo_extrabolditalic"
            android:text="@string/_5_sign_up_bonus"
            android:textAllCaps="false"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textColor="#fff"
            android:textSize="@dimen/txt_size_34"
            android:textStyle="normal" />


    </FrameLayout>


</LinearLayout>
